<think> Okay, let me analyze this git diff to create an appropriate commit message.
The user has provided a diff for .env.example file showing changes:
- APP_NAME from Laravel to "bCoinmart"
- APP_KEY updated with new value
- APP_URL changed from http://localhost to http://bcoinmart-v2.test

Hmm, the key points here are that this appears to be updating environment configuration files. The naming convention "bCoinmart" suggests it's part of a project named bCoinmart (with quotes around it). The change in URL indicates we're working with version 2.

The user wants:
1. A short summary (50-72 characters)
2. Imperative mood
3. Clear description of changes and purpose

Looking at these changes, they seem to be updating environment configuration for a specific project named bCoinmart. The quotes around the name might indicate it's part of their branding or that they want to treat this as an official name.

Considering the professional context (likely a developer working on Laravel projects), I should focus on making the commit message clear about which project was updated and why. Since .env.example is typically used for configuration examples, we're probably updating it to reflect actual production settings.

The summary needs to be under 72 characters but still descriptive enough. The changes are clearly environment variable updates - that's what the user should know at a glance without having to look at the diff itself.
</think>
Update .env.example file with bCoinmart configuration values

This commit updates the `.env.example` file for the bCoinmart project, modifying several key variables:
- `APP_NAME` updated from Laravel to "bCoinmart"
- `APP_KEY` set to a new value (base64 encoded)
- `APP_URL` changed to use the domain http://bcoinmart-v2.test

These changes are necessary to properly configure the application for deployment with bCoinmart's specific settings.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="bCoinmart"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eRhdPdfcuinWRGgwYq0g6AFBdl6W+z9Bo9DY+Vdx6D4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://bcoinmart-v2.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
