--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^3.2",
         "realrashid/sweet-alert": "^7.3",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.21",
@@ -33,7 +34,9 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },"files": [
+            "app/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
