--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.2",
         "realrashid/sweet-alert": "^7.3",
