--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "predis/predis": "^3.2",
         "realrashid/sweet-alert": "^7.3",
+        "socialiteproviders/telegram": "^4.1",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.21",
         "stevebauman/location": "^7.6"
