--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
+        "pragmarx/google2fa-laravel": "^2.3",
         "predis/predis": "^3.2",
         "realrashid/sweet-alert": "^7.3",
         "socialiteproviders/telegram": "^4.1",
