--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,18 @@ VITE_APP_NAME="${APP_NAME}"
 GOOGLE_CLIENT_ID=xxxx
 GOOGLE_CLIENT_SECRET=xxxx
 GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
+
+
+TELEGRAM_BOT_NAME=xxxx
+TELEGRAM_TOKEN=xxxxx:xxxxxxx
+TELEGRAM_REDIRECT_URI=https://dfcf66757434.ngrok-free.app/auth/telegram/callback
+#for local testing use ngrok or any tunneling service
+
+
+TIWILIO_SID=xxxxxxx
+TIWILIO_AUTH_TOKEN=xxxxxx
+TIWLIO_PHONE_NUMBER=xxxxxx
+
+VONAGE_NEXMO_KEY=xxxx
+VONAGE_NEXMO_SECRET=xxxxx
+VONAGE_NEXMO_BRAND=xxxxx
