--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "socialiteproviders/telegram": "^4.1",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.21",
-        "stevebauman/location": "^7.6"
+        "stevebauman/location": "^7.6",
+        "twilio/sdk": "^8.8",
+        "vonage/client": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
