.env.example update

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,5 @@ TIWLIO_PHONE_NUMBER=xxxxxx
 VONAGE_NEXMO_KEY=xxxx
 VONAGE_NEXMO_SECRET=xxxxx
 VONAGE_NEXMO_BRAND=xxxxx
+
+SENDBRIDGE_API_TOKEN=xxxxxx
